# PCSgiuseppemusci

./: printargs.cpp  vettori.cpp
esercitazione1/: CMakeLists.txt  media_t  media_t.cpp
esercitazione2/: CMakeLists.txt  bubblesort  bubblesort.cpp  posizionamento  posizionamento.cpp  primialg  primialg.cpp
esercitazione3/: CMakeLists.txt  main.cpp  rational  rational.hpp  vettori.cpp
esercitazione4/: CMakeLists.txt  measure_sorts.cpp  sorting.hpp  test_bubblesort.cpp  test_insertionsort.cpp  test_selectionsort.cpp
esercitazione5/: CMakeLists.txt  considerazioni.txt  measure_sorts.cpp  sorting.hpp  test_bubblesort.cpp  test_insertionsort.cpp  test_mergesort.cpp  test_quicksort.cpp  test_selectionsort.cpp
esercitazione5/build_debug/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  measure_sorts  test_bubblesort  test_insertionsort  test_mergesort  test_quicksort  test_selectionsort
esercitazione5/build_debug/Testing/Temporary/: CTestCostData.txt
esercitazione5/build_release/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  measure_sorts  test_bubblesort  test_insertionsort  test_mergesort  test_quicksort  test_selectionsort
esercitazione5/build_release/Testing/Temporary/: CTestCostData.txt
